--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,8 @@
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "sinon": "^1.17.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
