--- a/config/server/daydash.conf
+++ b/config/server/daydash.conf
@@ -33,8 +33,8 @@ server {
   keepalive_timeout 10;
 
   ssl on;
-  ssl_certificate     /home/deploy/daydash/current/certificate/STAR_daydash_co.crt;
-  ssl_certificate_key /home/deploy/daydash/current/certificate/daydash.key;
+  ssl_certificate     /home/deploy/daydash/current/config/server/STAR_daydash_co.crt;
+  ssl_certificate_key /home/deploy/daydash/current/config/server/daydash.key;
   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
   ssl_session_cache  builtin:1000  shared:SSL:10m;
   ssl_session_timeout  10m;
@@ -52,6 +52,6 @@ server {
 
   ssl_stapling            on;
   ssl_stapling_verify     on;
-  ssl_trusted_certificate /home/deploy/daydash/current/certificate/STAR_daydash_co.crt;
-  ssl_dhparam             home/deploy/daydash/current/certificate/;
+  ssl_trusted_certificate /home/deploy/daydash/current/config/server/STAR_daydash_co.crt;
+  ssl_dhparam             home/deploy/daydash/current/config/server/dhparam.pem;
 }
