--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,10 @@ test:
   database: Daydash_test
 
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
   database: daydash_production
   username: daydash
-  password: <%= ENV['DAYDASH_DATABASE_PASSWORD'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: localhost
+  port: 5432
