--- a/config/server/daydash.conf
+++ b/config/server/daydash.conf
@@ -5,7 +5,7 @@ upstream app {
 
 server {
   listen 443 ssl;
-  server_name daydash.co api.daydash.co brick.daydash.co brick-api.daydash.co staging.daydash.co staging-api.daydash.co;
+  server_name daydash.co api.daydash.co brick.daydash.co brick-api.daydash.co staging.daydash.co staging-api.daydash.co dev-pop.daydash.co;
 
   root /home/deploy/daydash/public;
 
