--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ test:
   <<: *default
   database: Daydash_test
 
-production:
+server: &server
   adapter: postgresql
   encoding: unicode
   database: daydash_production
@@ -20,3 +20,8 @@ production:
   password: <%= ENV['DATABASE_PASSWORD'] %>
   host: localhost
   port: 5432
+
+brick:
+  <<: *server
+production:
+  <<: *server
