--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,3 +22,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
+  omise_pkey: pkey_test_54rvq6seh8u6mkyxhuh
+  omise_skey: skey_test_54rvyxzna9s78vv22bc
