--- a/config/server/daydash.conf
+++ b/config/server/daydash.conf
@@ -4,8 +4,8 @@ upstream app {
 }
 
 server {
-  listen 443 ssl;
-  server_name daydash.co api.daydash.co brick.daydash.co brick-api.daydash.co staging.daydash.co staging-api.daydash.co dev-pop.daydash.co;
+  listen 443 default_server ssl;
+  server_name daydash.co beta.daydash.co api.daydash.co brick.daydash.co brick-api.daydash.co dev-non.daydash.co dev-pop.daydash.co;
 
   root /home/deploy/daydash/public;
 
