--- a/config/server/daydash.conf
+++ b/config/server/daydash.conf
@@ -1,15 +1,15 @@
-upstream app {
+upstream daydash {
   # Path to Puma SOCK file, as defined previously
   server unix:/home/deploy/daydash/shared/tmp/sockets/puma.sock fail_timeout=0;
 }
 
 server {
   listen 443 default_server ssl;
-  server_name daydash.co beta.daydash.co api.daydash.co brick.daydash.co brick-api.daydash.co dev-non.daydash.co dev-pop.daydash.co;
+  server_name daydash.co beta.daydash.co api.daydash.co brick.daydash.co brick-api.daydash.co;
 
   root /home/deploy/daydash/public;
 
-  try_files $uri/index.html $uri @app;
+  try_files $uri/index.html $uri @daydash;
 
   location / {
     proxy_set_header X-Forwarded-Proto $scheme;
@@ -19,7 +19,7 @@ server {
     proxy_redirect off;
     proxy_http_version 1.1;
     proxy_set_header Connection '';
-    proxy_pass http://app;
+    proxy_pass http://daydash;
   }
 
   #location ~ ^/(assets|fonts|system)/|favicon.ico|robots.txt {
@@ -33,8 +33,8 @@ server {
   keepalive_timeout 10;
 
   ssl on;
-  ssl_certificate     /home/deploy/daydash/current/config/server/STAR_daydash_co.crt;
-  ssl_certificate_key /home/deploy/daydash/current/config/server/daydash.key;
+  ssl_certificate     certificate/STAR_daydash_co.crt;
+  ssl_certificate_key certificate/daydash.key;
   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
   ssl_session_cache  builtin:1000  shared:SSL:10m;
   ssl_session_timeout  10m;
@@ -52,6 +52,6 @@ server {
 
   ssl_stapling            on;
   ssl_stapling_verify     on;
-  ssl_trusted_certificate /home/deploy/daydash/current/config/server/STAR_daydash_co.crt;
-  ssl_dhparam             /home/deploy/daydash/current/config/server/dhparam.pem;
+  ssl_trusted_certificate certificate/STAR_daydash_co.crt;
+  ssl_dhparam             certificate/dhparam.pem;
 }
