--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,6 +22,6 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
-  omise_pkey: pkey_test_54rvq6seh8u6mkyxhuh
-  omise_skey: skey_test_54rvyxzna9s78vv22bc
-  intercom_secure_mode_secret_key: 'fZfNfrU_5dNfi0SzRy5OgW-nGqgFWLaAEUUMiULu'
+  omise_pkey: <%= ENV['OMISE_PKEY'] %>
+  omise_skey: <%= ENV['OMISE_SKEY'] %>
+  intercom_secure_mode_secret_key: <%= ENV['INTERCOM_SKEY']%>
