--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,13 +1,13 @@
-:concurrency: 5
-:pidfile: /tmp/pids/sidekiq.pid
+# :concurrency: 5
+# :pidfile: /tmp/pids/sidekiq.pid
 
-:queues:
-    - default
-    - [another_queue, 2]
+# :queues:
+#     - default
+#     - [another_queue, 2]
 
-development:
-  :concurrency: 5
-staging:
-  :concurrency: 10
-production:
-  :concurrency: 20
+# development:
+#   :concurrency: 5
+# staging:
+#   :concurrency: 10
+# production:
+#   :concurrency: 20
