### ticket passed every day
- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/config/scheduler.yml
+++ b/config/scheduler.yml
@@ -22,3 +22,9 @@ OrderInspectorJob:
   class: "OrderInspectorJob"
   queue: default
   active_job: true
+
+TicketInspectorJob:
+  cron: "0 1 * * *"
+  class: "TicketInspectorJob"
+  queue: default
+  active_job: true
