--- a/circle.yml
+++ b/circle.yml
@@ -1,23 +1,27 @@
 ## Customize the test machine
 machine:
-
-  # timezone:
-  #   America/Los_Angeles # Set the timezone
+  timezone:
+    Asia/Bangkok
 
   # Version of ruby to use
   ruby:
     version:
       2.3.1
 
-  # # Override /etc/hosts
-  # hosts:
-  #   circlehost: 127.0.0.1
-  #   dev.mycompany.com: 127.0.0.1
+  # Version of node to use
+  node:
+    version:
+      6.9.0
 
-  # # Add some environment variables
-  # environment:
-  #   CIRCLE_ENV: test
-  #   DATABASE_URL: postgres://ubuntu:@127.0.0.1:5432/circle_test
+# # Override /etc/hosts
+# hosts:
+#   circlehost: 127.0.0.1
+#   dev.mycompany.com: 127.0.0.1
+
+# # Add some environment variables
+# environment:
+#   CIRCLE_ENV: test
+#   DATABASE_URL: postgres://ubuntu:@127.0.0.1:5432/circle_test
 
 # ## Customize checkout
 # checkout:
@@ -26,15 +30,16 @@ machine:
 #     - git submodule update --init # use submodules
 
 # ## Customize dependencies
-# dependencies:
-#   pre:
-#     - npm install coffeescript # install from a different package manager
-#     - gem uninstall bundler # use a custom version of bundler
-#     - gem install bundler --pre
-
-#   override:
-#     - bundle install: # note ':' here
-#         timeout: 180 # fail if command has no output for 3 minutes
+dependencies:
+  # pre:
+  # - npm install coffeescript # install from a different package manager
+  # - gem uninstall bundler # use a custom version of bundler
+  # - gem install bundler --pre
+  override:
+    - bundle install
+    - npm install
+  post:
+    - bundle exec rake assets:precompile
 
 #   # we automatically cache and restore many dependencies between
 #   # builds. If you need to, you can add custom paths to cache:
@@ -51,8 +56,8 @@ machine:
 
 # ## Customize test commands
 # test:
-#   override:
-#     - phpunit test/unit-tests # use PHPunit for testing
+# #   override:
+# #     - phpunit test/unit-tests # use PHPunit for testing
 #   post:
 #     - bundle exec rake jasmine:ci: # add an extra test type
 #         environment:
