--- a/circle.yml
+++ b/circle.yml
@@ -31,10 +31,10 @@ machine:
 
 # ## Customize dependencies
 dependencies:
-  # pre:
-  # - npm install coffeescript # install from a different package manager
-  # - gem uninstall bundler # use a custom version of bundler
-  # - gem install bundler --pre
+  pre:
+    # - npm install coffeescript # install from a different package manager
+    # - gem uninstall bundler # use a custom version of bundler
+    - gem install bundler 1.13.5
   override:
     - bundle install
     - npm install
