--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "postinstall": "cd client && npm install",
-    "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
+    "rails-server": "echo 'visit http://daydash.local:1337/beta' && foreman start -f Procfile.dev",
     "test": "rspec"
   }
 }
