--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,8 @@
 {
   "name": "daydash",
   "version": "0.0.1",
+  "author": "Arnon Hongklay",
+  "description": "assets of daydash",
   "private": true,
   "engines": {
     "node": "5.10.0",
@@ -9,7 +11,10 @@
   "scripts": {
     "build:test": "webpack --config webpack.config.js",
     "build:production": "NODE_ENV=production webpack --config webpack.config.js",
-    "build:development": "webpack -w --config webpack.config.js"
+    "build:development": "webpack -w --config webpack.config.js",
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
+    "test:watch": "npm run test -- --watch"
   },
   "cacheDirectories": [
     "node_modules",
