--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,8 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "youtube-api-search": "0.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
