--- a/package.json
+++ b/package.json
@@ -1,17 +1,61 @@
 {
   "name": "daydash",
   "version": "0.0.1",
+  "author": "Arnon Hongklay",
+  "description": "Assets of daydash",
   "private": true,
   "engines": {
     "node": "5.10.0",
     "npm": "3.5.0"
   },
   "scripts": {
-    "postinstall": "cd client && npm install",
-    "rails-server": "echo 'visit http://daydash.local:1337/beta' && foreman start -f Procfile.dev",
-    "test": "rspec"
+    "build:test": "webpack --config webpack.config.js",
+    "build:production": "NODE_ENV=production webpack --config webpack.config.js",
+    "build:development": "webpack -w --config webpack.config.js",
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
+    "test:watch": "npm run test -- --watch"
+  },
+  "cacheDirectories": [
+    "node_modules"
+  ],
+  "dependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "babel-runtime": "^6.6.1",
+    "es5-shim": "^4.5.7",
+    "expose-loader": "^0.7.1",
+    "imports-loader": "^0.6.5",
+    "lodash": "^4.17.4",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-on-rails": "6.3.4",
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "webpack": "^1.12.14",
+    "youtube-api-search": "0.0.5"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0"
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "chai": "^3.5.0",
+    "chai-jquery": "^2.0.0",
+    "jquery": "^3.1.1",
+    "jsdom": "^9.9.1",
+    "mocha": "^3.2.0",
+    "react-addons-test-utils": "^15.4.1",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
