--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: PaymentPlatform_development
+  database: Antify_Platform_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: PaymentPlatform
+  #username: Antify_Platform
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: PaymentPlatform_test
+  database: Antify_Platform_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: PaymentPlatform_production
-  username: PaymentPlatform
-  password: <%= ENV['PAYMENTPLATFORM_DATABASE_PASSWORD'] %>
+  database: Antify_Platform_production
+  username: Antify_Platform
+  password: <%= ENV['ANTIFY_PLATFORM_DATABASE_PASSWORD'] %>
